# chat

code/common/: asr.hpp  channel.hpp  icsearch.hpp  logger.hpp  rabbitmq.hpp
code/server/common/: asr.hpp  channel.hpp  es_operations.hpp  etcd.hpp  icsearch.hpp  logger.hpp  models.hpp  mysql_operations.hpp  rabbitmq.hpp  redis_operations.hpp  sms.hpp  utils.hpp
code/server/file/: CMakeLists.txt  base.pb.h  file.pb.h  file_server.cc  file_server.hpp
code/server/odb/user/: user-odb.cxx  user-odb.hxx  user-odb.ixx  user.hxx  user.sql
code/server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmite.proto  user.proto
code/server/proto/cpp_out/: base.pb.cc  file.pb.cc  user.pb.cc  user.pb.h
code/server/speech/: CMakeLists.txt  speech.pb.cc  speech.pb.h  speech_server.cc  speech_server.hpp
code/server/sql/: chat_session_members.sql  chat_sessions.sql  friend_applys.sql  messages.sql  relations.sql  users.sql
code/server/user/: CMakeLists.txt  makefile  test  test.cc  user_server.cc  user_server.hpp
